# 3DGame

./: .gitignore  README.md
Project/: CMakeCache.txt  CMakeLists.txt  Task1.txt  build.ninja  cmake_install.cmake
Project/Read/: 3d_sao_transformation_plan.md  AI_CONTEXT.md  README .md  README.md  architecture.md  bugs.md  features.md  project-context.md
Project/Recources/mob/: license.txt  scene.gltf
Project/Recources/sword/: license.txt  scene.gltf
Project/plans/: player_enhancement_plan.md
Project/src/combat/: CombatSystem.cpp  CombatSystem.h  HealingPotion.cpp  HealingPotion.h  Hitbox.cpp  Hitbox.h  Skill.cpp  Skill.h  SwordSkill.cpp  SwordSkill.h
Project/src/core/: Camera.cpp  Camera.h  ColorHandler.cpp  ColorHandler.h  FlatShader.h  HUDRenderer.cpp  HUDRenderer.h  InputHandler.cpp  InputHandler.h  Mesh.cpp  Mesh.h  Physics.cpp  Physics.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Window.cpp  Window.h  WorldSettings.h
Project/src/entities/: Entity.cpp  Entity.h  Monster.cpp  Monster.h  NPC.cpp  NPC.h  Player.cpp  Player.h
Project/src/game/: Game.cpp  Game.h  GameState.h  main.cpp
Project/src/quest/: Quest.cpp  Quest.h  QuestManager.cpp
Project/src/ui/: UI.cpp  UI.h
Project/src/world/: Biome.cpp  Biome.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Floor.cpp  Floor.h  FloorManager.cpp  FloorManager.h  Noise.h  WorldRenderer.cpp  WorldRenderer.h
